fix layout shift on tablet devices when pomodoro starts

--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -12,7 +12,7 @@ $font-size-xlg: 1.6rem;
 $font-size-xl: 1.8rem;
 $font-size-xxl: 2.4rem;
 
-$min-width: 350px;
+$min-width: 360px;
 $max-width: 1800px;
 
 $padding-sm: 5px;
