--- a/src/styles/components/_pomodoro.scss
+++ b/src/styles/components/_pomodoro.scss
@@ -1,6 +1,6 @@
 .pomodoro {
   display: none;
-  flex-wrap: wrap;
+  // flex-wrap: wrap;
   align-items: baseline;
   justify-content: center;
   gap: $gap-md;
@@ -32,7 +32,7 @@
     word-break: break-word;
 
     @include respond(mobile) {
-      font-size: $font-size-md;
+      font-size: $font-size-lg;
     }
   }
   &__timer {
