--- a/src/styles/components/_task.scss
+++ b/src/styles/components/_task.scss
@@ -1,7 +1,7 @@
 .task {
   display: grid;
   align-items: flex-start;
-  grid-template-columns: repeat(auto-fit, minmax($min-width, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(min($min-width, 100%), 1fr));
   gap: $gap-md;
   font-weight: 400;
   &__set {
@@ -67,7 +67,7 @@
       white-space: pre-line;
       color: var(--text-color, #222);
       margin: $margin-md;
-      padding-left: calc($padding-md + $padding-sm);
+      padding-left: $padding-md;
       height: fit-content;
       background-color: rgba(0, 0, 0, 0.1);
       border-radius: $border-radius-md;
